--- a/web/index.html
+++ b/web/index.html
@@ -36,3 +36,8 @@
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
+
+
+<script type="text/javascript">
+    window.flutterWebRenderer = "html";
+</script>
